PL0/grammar/GrammarParser.cpp

// Generated from ./grammar/Grammar.g4 by ANTLR 4.8


#include "GrammarListener.h"
#include "GrammarVisitor.h"

#include "GrammarParser.h"


using namespace antlrcpp;
using namespace antlr4;

GrammarParser::GrammarParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

GrammarParser::~GrammarParser() {
  delete _interpreter;
}

std::string GrammarParser::getGrammarFileName() const {
  return "Grammar.g4";
}

const std::vector<std::string>& GrammarParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& GrammarParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

GrammarParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::UnitContext* GrammarParser::ProgramContext::unit() {
  return getRuleContext<GrammarParser::UnitContext>(0);
}


size_t GrammarParser::ProgramContext::getRuleIndex() const {
  return GrammarParser::RuleProgram;
}

void GrammarParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void GrammarParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any GrammarParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::ProgramContext* GrammarParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, GrammarParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    unit();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnitContext ------------------------------------------------------------------

GrammarParser::UnitContext::UnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::UnitContext::Program() {
  return getToken(GrammarParser::Program, 0);
}

GrammarParser::IdentifierContext* GrammarParser::UnitContext::identifier() {
  return getRuleContext<GrammarParser::IdentifierContext>(0);
}

GrammarParser::Sub_programContext* GrammarParser::UnitContext::sub_program() {
  return getRuleContext<GrammarParser::Sub_programContext>(0);
}


size_t GrammarParser::UnitContext::getRuleIndex() const {
  return GrammarParser::RuleUnit;
}

void GrammarParser::UnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnit(this);
}

void GrammarParser::UnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnit(this);
}


antlrcpp::Any GrammarParser::UnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitUnit(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::UnitContext* GrammarParser::unit() {
  UnitContext *_localctx = _tracker.createInstance<UnitContext>(_ctx, getState());
  enterRule(_localctx, 2, GrammarParser::RuleUnit);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    match(GrammarParser::Program);
    setState(41);
    identifier();
    setState(42);
    sub_program();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sub_programContext ------------------------------------------------------------------

GrammarParser::Sub_programContext::Sub_programContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::Statement_sectionContext* GrammarParser::Sub_programContext::statement_section() {
  return getRuleContext<GrammarParser::Statement_sectionContext>(0);
}

GrammarParser::Const_var_declaresContext* GrammarParser::Sub_programContext::const_var_declares() {
  return getRuleContext<GrammarParser::Const_var_declaresContext>(0);
}

GrammarParser::Var_declaresContext* GrammarParser::Sub_programContext::var_declares() {
  return getRuleContext<GrammarParser::Var_declaresContext>(0);
}


size_t GrammarParser::Sub_programContext::getRuleIndex() const {
  return GrammarParser::RuleSub_program;
}

void GrammarParser::Sub_programContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSub_program(this);
}

void GrammarParser::Sub_programContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSub_program(this);
}


antlrcpp::Any GrammarParser::Sub_programContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitSub_program(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::Sub_programContext* GrammarParser::sub_program() {
  Sub_programContext *_localctx = _tracker.createInstance<Sub_programContext>(_ctx, getState());
  enterRule(_localctx, 4, GrammarParser::RuleSub_program);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GrammarParser::Const) {
      setState(44);
      const_var_declares();
    }
    setState(48);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GrammarParser::Var) {
      setState(47);
      var_declares();
    }
    setState(50);
    statement_section();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Const_var_declaresContext ------------------------------------------------------------------

GrammarParser::Const_var_declaresContext::Const_var_declaresContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::Const_var_declaresContext::Const() {
  return getToken(GrammarParser::Const, 0);
}

std::vector<GrammarParser::Def_const_varContext *> GrammarParser::Const_var_declaresContext::def_const_var() {
  return getRuleContexts<GrammarParser::Def_const_varContext>();
}

GrammarParser::Def_const_varContext* GrammarParser::Const_var_declaresContext::def_const_var(size_t i) {
  return getRuleContext<GrammarParser::Def_const_varContext>(i);
}

tree::TerminalNode* GrammarParser::Const_var_declaresContext::Semi() {
  return getToken(GrammarParser::Semi, 0);
}

std::vector<tree::TerminalNode *> GrammarParser::Const_var_declaresContext::Comma() {
  return getTokens(GrammarParser::Comma);
}

tree::TerminalNode* GrammarParser::Const_var_declaresContext::Comma(size_t i) {
  return getToken(GrammarParser::Comma, i);
}


size_t GrammarParser::Const_var_declaresContext::getRuleIndex() const {
  return GrammarParser::RuleConst_var_declares;
}

void GrammarParser::Const_var_declaresContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConst_var_declares(this);
}

void GrammarParser::Const_var_declaresContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConst_var_declares(this);
}


antlrcpp::Any GrammarParser::Const_var_declaresContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitConst_var_declares(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::Const_var_declaresContext* GrammarParser::const_var_declares() {
  Const_var_declaresContext *_localctx = _tracker.createInstance<Const_var_declaresContext>(_ctx, getState());
  enterRule(_localctx, 6, GrammarParser::RuleConst_var_declares);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    match(GrammarParser::Const);
    setState(53);
    def_const_var();
    setState(58);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GrammarParser::Comma) {
      setState(54);
      match(GrammarParser::Comma);
      setState(55);
      def_const_var();
      setState(60);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(61);
    match(GrammarParser::Semi);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Def_const_varContext ------------------------------------------------------------------

GrammarParser::Def_const_varContext::Def_const_varContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::IdentifierContext* GrammarParser::Def_const_varContext::identifier() {
  return getRuleContext<GrammarParser::IdentifierContext>(0);
}

tree::TerminalNode* GrammarParser::Def_const_varContext::Eq() {
  return getToken(GrammarParser::Eq, 0);
}

GrammarParser::Unsigned_intContext* GrammarParser::Def_const_varContext::unsigned_int() {
  return getRuleContext<GrammarParser::Unsigned_intContext>(0);
}


size_t GrammarParser::Def_const_varContext::getRuleIndex() const {
  return GrammarParser::RuleDef_const_var;
}

void GrammarParser::Def_const_varContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDef_const_var(this);
}

void GrammarParser::Def_const_varContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDef_const_var(this);
}


antlrcpp::Any GrammarParser::Def_const_varContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitDef_const_var(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::Def_const_varContext* GrammarParser::def_const_var() {
  Def_const_varContext *_localctx = _tracker.createInstance<Def_const_varContext>(_ctx, getState());
  enterRule(_localctx, 8, GrammarParser::RuleDef_const_var);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    identifier();
    setState(64);
    match(GrammarParser::Eq);
    setState(65);
    unsigned_int();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Unsigned_intContext ------------------------------------------------------------------

GrammarParser::Unsigned_intContext::Unsigned_intContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::Unsigned_intContext::IntNum() {
  return getToken(GrammarParser::IntNum, 0);
}


size_t GrammarParser::Unsigned_intContext::getRuleIndex() const {
  return GrammarParser::RuleUnsigned_int;
}

void GrammarParser::Unsigned_intContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnsigned_int(this);
}

void GrammarParser::Unsigned_intContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnsigned_int(this);
}


antlrcpp::Any GrammarParser::Unsigned_intContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitUnsigned_int(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::Unsigned_intContext* GrammarParser::unsigned_int() {
  Unsigned_intContext *_localctx = _tracker.createInstance<Unsigned_intContext>(_ctx, getState());
  enterRule(_localctx, 10, GrammarParser::RuleUnsigned_int);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    match(GrammarParser::IntNum);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_declaresContext ------------------------------------------------------------------

GrammarParser::Var_declaresContext::Var_declaresContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::Var_declaresContext::Var() {
  return getToken(GrammarParser::Var, 0);
}

std::vector<GrammarParser::IdentifierContext *> GrammarParser::Var_declaresContext::identifier() {
  return getRuleContexts<GrammarParser::IdentifierContext>();
}

GrammarParser::IdentifierContext* GrammarParser::Var_declaresContext::identifier(size_t i) {
  return getRuleContext<GrammarParser::IdentifierContext>(i);
}

tree::TerminalNode* GrammarParser::Var_declaresContext::Semi() {
  return getToken(GrammarParser::Semi, 0);
}

tree::TerminalNode* GrammarParser::Var_declaresContext::Comma() {
  return getToken(GrammarParser::Comma, 0);
}


size_t GrammarParser::Var_declaresContext::getRuleIndex() const {
  return GrammarParser::RuleVar_declares;
}

void GrammarParser::Var_declaresContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_declares(this);
}

void GrammarParser::Var_declaresContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_declares(this);
}


antlrcpp::Any GrammarParser::Var_declaresContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitVar_declares(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::Var_declaresContext* GrammarParser::var_declares() {
  Var_declaresContext *_localctx = _tracker.createInstance<Var_declaresContext>(_ctx, getState());
  enterRule(_localctx, 12, GrammarParser::RuleVar_declares);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    match(GrammarParser::Var);
    setState(70);
    identifier();

    setState(71);
    match(GrammarParser::Comma);
    setState(72);
    identifier();
    setState(74);
    match(GrammarParser::Semi);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierContext ------------------------------------------------------------------

GrammarParser::IdentifierContext::IdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::IdentifierContext::Id() {
  return getToken(GrammarParser::Id, 0);
}


size_t GrammarParser::IdentifierContext::getRuleIndex() const {
  return GrammarParser::RuleIdentifier;
}

void GrammarParser::IdentifierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdentifier(this);
}

void GrammarParser::IdentifierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdentifier(this);
}


antlrcpp::Any GrammarParser::IdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitIdentifier(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::IdentifierContext* GrammarParser::identifier() {
  IdentifierContext *_localctx = _tracker.createInstance<IdentifierContext>(_ctx, getState());
  enterRule(_localctx, 14, GrammarParser::RuleIdentifier);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(GrammarParser::Id);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Statement_sectionContext ------------------------------------------------------------------

GrammarParser::Statement_sectionContext::Statement_sectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::StatementContext* GrammarParser::Statement_sectionContext::statement() {
  return getRuleContext<GrammarParser::StatementContext>(0);
}

GrammarParser::Compound_statementsContext* GrammarParser::Statement_sectionContext::compound_statements() {
  return getRuleContext<GrammarParser::Compound_statementsContext>(0);
}


size_t GrammarParser::Statement_sectionContext::getRuleIndex() const {
  return GrammarParser::RuleStatement_section;
}

void GrammarParser::Statement_sectionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement_section(this);
}

void GrammarParser::Statement_sectionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement_section(this);
}


antlrcpp::Any GrammarParser::Statement_sectionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitStatement_section(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::Statement_sectionContext* GrammarParser::statement_section() {
  Statement_sectionContext *_localctx = _tracker.createInstance<Statement_sectionContext>(_ctx, getState());
  enterRule(_localctx, 16, GrammarParser::RuleStatement_section);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(78);
      statement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(79);
      compound_statements();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Compound_statementsContext ------------------------------------------------------------------

GrammarParser::Compound_statementsContext::Compound_statementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GrammarParser::Compound_statementsContext::Begin() {
  return getToken(GrammarParser::Begin, 0);
}

tree::TerminalNode* GrammarParser::Compound_statementsContext::End() {
  return getToken(GrammarParser::End, 0);
}

std::vector<GrammarParser::StatementContext *> GrammarParser::Compound_statementsContext::statement() {
  return getRuleContexts<GrammarParser::StatementContext>();
}

GrammarParser::StatementContext* GrammarParser::Compound_statementsContext::statement(size_t i) {
  return getRuleContext<GrammarParser::StatementContext>(i);
}


size_t GrammarParser::Compound_statementsContext::getRuleIndex() const {
  return GrammarParser::RuleCompound_statements;
}

void GrammarParser::Compound_statementsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompound_statements(this);
}

void GrammarParser::Compound_statementsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompound_statements(this);
}


antlrcpp::Any GrammarParser::Compound_statementsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitCompound_statements(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::Compound_statementsContext* GrammarParser::compound_statements() {
  Compound_statementsContext *_localctx = _tracker.createInstance<Compound_statementsContext>(_ctx, getState());
  enterRule(_localctx, 18, GrammarParser::RuleCompound_statements);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(GrammarParser::Begin);
    setState(86);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << GrammarParser::Begin)
      | (1ULL << GrammarParser::While)
      | (1ULL << GrammarParser::If)
      | (1ULL << GrammarParser::Id)
      | (1ULL << GrammarParser::Semi))) != 0)) {
      setState(83);
      statement();
      setState(88);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(89);
    match(GrammarParser::End);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

GrammarParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::Assign_statementContext* GrammarParser::StatementContext::assign_statement() {
  return getRuleContext<GrammarParser::Assign_statementContext>(0);
}

tree::TerminalNode* GrammarParser::StatementContext::Semi() {
  return getToken(GrammarParser::Semi, 0);
}

GrammarParser::If_statementContext* GrammarParser::StatementContext::if_statement() {
  return getRuleContext<GrammarParser::If_statementContext>(0);
}

GrammarParser::While_statementContext* GrammarParser::StatementContext::while_statement() {
  return getRuleContext<GrammarParser::While_statementContext>(0);
}

GrammarParser::Compound_statementsContext* GrammarParser::StatementContext::compound_statements() {
  return getRuleContext<GrammarParser::Compound_statementsContext>(0);
}


size_t GrammarParser::StatementContext::getRuleIndex() const {
  return GrammarParser::RuleStatement;
}

void GrammarParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void GrammarParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


antlrcpp::Any GrammarParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::StatementContext* GrammarParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 20, GrammarParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(98);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GrammarParser::Id: {
        enterOuterAlt(_localctx, 1);
        setState(91);
        assign_statement();
        setState(92);
        match(GrammarParser::Semi);
        break;
      }

      case GrammarParser::If: {
        enterOuterAlt(_localctx, 2);
        setState(94);
        if_statement();
        break;
      }

      case GrammarParser::While: {
        enterOuterAlt(_localctx, 3);
        setState(95);
        while_statement();
        break;
      }

      case GrammarParser::Begin: {
        enterOuterAlt(_localctx, 4);
        setState(96);
        compound_statements();
        break;
      }

      case GrammarParser::Semi: {
        enterOuterAlt(_localctx, 5);
        setState(97);
        match(GrammarParser::Semi);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Assign_statementContext ------------------------------------------------------------------

GrammarParser::Assign_statementContext::Assign_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::IdentifierContext* GrammarParser::Assign_statementContext::identifier() {
  return getRuleContext<GrammarParser::IdentifierContext>(0);
}

tree::TerminalNode* GrammarParser::Assign_statementContext::Assign() {
  return getToken(GrammarParser::Assign, 0);
}

GrammarParser::ExpressionContext* GrammarParser::Assign_statementContext::expression() {
  return getRuleContext<GrammarParser::ExpressionContext>(0);
}


size_t GrammarParser::Assign_statementContext::getRuleIndex() const {
  return GrammarParser::RuleAssign_statement;
}

void GrammarParser::Assign_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssign_statement(this);
}

void GrammarParser::Assign_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssign_statement(this);
}


antlrcpp::Any GrammarParser::Assign_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitAssign_statement(this);
  else
    return visitor->visitChildren(this);
}

GrammarParser::Assign_statementContext* GrammarParser::assign_statement() {
  Assign_statementContext *_localctx = _tracker.createInstance<Assign_statementContext>(_ctx, getState());
  enterRule(_localctx, 22, GrammarParser::RuleAssign_statement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    identifier();
    setState(101);
    match(GrammarParser::Assign);
    setState(102);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

GrammarParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GrammarParser::ItemContext* GrammarParser::ExpressionContext::item() {
  return getRuleContext<GrammarParser::ItemContext>(0);
}

tree::TerminalNode* GrammarParser::ExpressionContext::Add() {
  return getToken(GrammarParser::Add, 0);
}

tree::TerminalNode* GrammarParser::ExpressionContext::Sub() {
  return getToken(GrammarParser::Sub, 0);
}

GrammarParser::ExpressionContext* GrammarParser::ExpressionContext::expression() {
  return getRuleContext<GrammarParser::ExpressionContext>(0);
}


size_t GrammarParser::ExpressionContext::getRuleIndex() const {
  return GrammarParser::RuleExpression;
}

void GrammarParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void GrammarParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


antlrcpp::Any GrammarParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GrammarVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}


GrammarParser::ExpressionContext* GrammarParser::expression() {
   return expression(0);
}

GrammarParser::ExpressionContext* GrammarParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  GrammarParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  GrammarParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 24;
  enterRecursionRule(_localctx, 24, GrammarParser::RuleExpression, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(106);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GrammarParser::Add

    || _la == GrammarParser::Sub) {
      setState(105);
      _la = _input->LA(1);
      if (!(_la == GrammarParser::Add

      || _la == GrammarParser::Sub)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
    }
    setState(108);
    item(0);
    _ctx->stop = _input->LT(-1);
    setState(115);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleExpression);
        setState(110);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(111);
        _la = _input->LA(1);
        if (!(_la == GrammarParser::Add

        || _la == GrammarParser::Sub)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(112);
        item(0); 
      }
      setState(117);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}
